--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
     <p>
         <a href="#">Download Excursion (Coming soon!)</a>
     </p>
+    <p>
+        <video autoplay muted loop>
+            <source src="./resourses/images/excursion.mp4" type="video/mp4">
+        </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p>
+        Excursion remembers plases you like, and recommends new points of interest around you
+    </p>
+    <p>
+        <img src="./resourses/images/camp.jpeg" alt="camping">
+    </p>
+    <p>
+        <img src="./resourses/images/phone.png" alt="cellphone icon">
+    </p>
+    <h2>Coming soon for iPhone and Android</h2>
+    <p>
+        <a href="#">Download Excursion (Coming soon!)</a>
+    </p>
+    <footer>
+        <p class="footer">©Excursion</p>
+    </footer>
 </body>
 </html>
