fixed resources folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./resourses/css/style.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
     <title>Excursion</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     </p>
     <p>
         <video autoplay muted loop>
-            <source src="./resourses/images/excursion.mp4" type="video/mp4">
+            <source src="./resources/images/excursion.mp4" type="video/mp4">
         </video>
     </p>
     <h2>Your personal travel guide</h2>
@@ -22,10 +22,10 @@
         Excursion remembers plases you like, and recommends new points of interest around you
     </p>
     <p>
-        <img src="./resourses/images/camp.jpeg" alt="camping">
+        <img src="./resources/images/camp.jpeg" alt="camping">
     </p>
     <p>
-        <img src="./resourses/images/phone.png" alt="cellphone icon">
+        <img src="./resources/images/phone.png" alt="cellphone icon">
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <p>
