--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <title>Excursion</title>
+    <title>Nice Excursion</title>
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
